--- a/config/locales/custom/en/admin.yml
+++ b/config/locales/custom/en/admin.yml
@@ -6,5 +6,7 @@ en:
       disabled_feature: The change log feature is disabled. Ask your system administrator to enable it via the secrets file.
       index:
         title: Changelog
+      search:
+        placeholder: "Search by the class name and the instance ID. As example: Budget#2"
     menu:
       audits: Changelog
