Add audits link to admin navigation sidebar
Only when the feature is enabled.

--- a/config/locales/custom/en/admin.yml
+++ b/config/locales/custom/en/admin.yml
@@ -6,3 +6,5 @@ en:
       disabled_feature: The change log feature is disabled. Ask your system administrator to enable it via the secrets file.
       index:
         title: Changelog
+    menu:
+      audits: Changelog
