--- a/config/locales/custom/es/general.yml
+++ b/config/locales/custom/es/general.yml
@@ -2,3 +2,6 @@ es:
   account:
     show:
       last_sign_in: "Último acceso efectuado: %{last_sign_in_at} desde la IP %{last_sign_in_ip}"
+  layouts:
+    header:
+      collaborative_legislation: "Propuestas municipales"
