Add Cabildo's logo to isla abierta footer

--- a/config/locales/custom/es/general.yml
+++ b/config/locales/custom/es/general.yml
@@ -1,4 +1,8 @@
 es:
   layouts:
+    footer:
+      collaboration:
+        alt_cabildo: "Cabildo de Tenerife"
+        text: "Colabora"
     header:
       collaborative_legislation: "Propuestas municipales"
